deployed all
